# aura

./: .all-contributorsrc  .commitlintrc.js  .config.mk  .dockerignore  .env.example  .gitignore  .npmrc  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Jenkinsfile  Makefile  README.md  cliff.toml  cog.toml  docker-compose.yml  package-lock.json  package.json  quickstart.toml  release.config.js  rust-toolchain.toml
crates/aura/: Cargo.toml
crates/aura-cli/: .welcome  .welcome.no-color-codes  Cargo.toml  README.md
crates/aura-cli/src/: aura_dir.rs  cli.rs  config.rs  event_names.rs  init.rs  lib.rs  logging.rs  main.rs  oneshot.rs  permissions.rs  test_fixtures.rs  theme.rs  worker.rs
crates/aura-cli/src/api/: approval.rs  client.rs  mcp_status.rs  mod.rs  session.rs  stream.rs  types.rs
crates/aura-cli/src/backend/: direct.rs  http.rs  mod.rs
crates/aura-cli/src/init/: config_template.toml  model_list.rs  prompt.rs  provider.rs  ranking.rs  render.rs  spec.rs  test_support.rs
crates/aura-cli/src/repl/: commands.rs  conversations.rs  history.rs  input_reader.rs  loop.rs  mcp.rs  mod.rs  registry.rs  telemetry_notice.rs
crates/aura-cli/src/repl/mcp/: catalog.rs  mod.rs  wizard.rs
crates/aura-cli/src/tools/: definitions.rs  diff.rs  display.rs  execution.rs  mod.rs  rig_tools.rs
crates/aura-cli/src/ui/: agent_overview.rs  animation.rs  event_replay.rs  input_frame.rs  input_hint.rs  markdown.rs  mid_stream.rs  mod.rs  orchestrator.rs  pre_launch.rs  prompt.rs  state.rs  status_bar.rs  stream_panel.rs  text.rs  welcome.rs  wrap.rs
crates/aura-cli/tests/: cli_args.rs
crates/aura-config/: Cargo.toml
crates/aura-config/src/: builder.rs  config.rs  config_test.rs  env.rs  error.rs  lenient_bool.rs  lib.rs  loader.rs  orchestration.rs  scratchpad.rs  session_store.rs  skills.rs  telemetry.rs  writer.rs
crates/aura-config/tests/: dotenv_resolution.rs
crates/aura-events/: Cargo.toml
crates/aura-events/src/: event_names.rs  lib.rs  orchestration.rs
crates/aura-telemetry/: Cargo.toml
crates/aura-telemetry-derive/: Cargo.toml
crates/aura-telemetry-derive/src/: lib.rs
crates/aura-telemetry/src/: bootstrap.rs  disable.rs  events.rs  handle.rs  inspection_log.rs  install_id.rs  lib.rs  properties.rs  sink.rs  test_support.rs
crates/aura-telemetry/tests/: compile_fail.rs  consent_state.rs  derive_smoke.rs  wire_format.rs
crates/aura-telemetry/tests/compile_fail/: free_string_field.rs  free_string_field.stderr  integer_field.rs  integer_field.stderr  property_value_field.rs  property_value_field.stderr
crates/aura-web-server/: Cargo.toml  README.md
crates/aura-web-server/src/: handlers.rs  health.rs  investigation.rs  lib.rs  main.rs  metrics.rs  session_store.rs  types.rs
crates/aura-web-server/src/a2a/: agent_executor.rs  bus_bridge.rs  handler.rs  mod.rs  overrides.rs  request_handler.rs  shared_task_store.rs
crates/aura-web-server/src/investigation/: client.rs  finalize.rs  handler.rs  runner.rs
crates/aura-web-server/src/session_store/: mod.rs  redis.rs
crates/aura-web-server/src/session_store/redis/: approval_store.rs  event_bus.rs  mod.rs  task_store.rs
crates/aura-web-server/src/streaming/: handlers.rs  mod.rs  otel.rs  types.rs
crates/aura-web-server/tests/: a2a_streaming_test.rs  a2a_test.rs  aura_events_test.rs  cancellation_notification_test.rs  cancellation_test.rs  concurrent_streaming_isolation_test.rs  fastmcp_structured_content_test.rs  header_forwarding_tests.rs  integration_guard.rs  investigation_client_test.rs  mcp_progress_test.rs  metrics_test.rs  orchestration_events_test.rs  proactive_tool_ui_tests.rs  progress_disconnect_test.rs  redis_session_store_test.rs  scratchpad_test.rs  sre_orchestration_test.rs  streaming_tests.rs  test-config.toml
crates/aura/src/: approval_event_broker.rs  bedrock_embedding.rs  bootstrap.rs  builder.rs  builder_tests.rs  config.rs  env_flags.rs  error.rs  error_taxonomy.rs  fallback_tool_parser.rs  fallback_tool_stream.rs  hitl.rs  lenient_int.rs  lib.rs  logging.rs  mcp.rs  mcp_dynamic.rs  mcp_progress.rs  mcp_response.rs  mcp_sse.rs  mcp_streamable_http.rs  mcp_tool_execution.rs  model_limits.rs  openinference_exporter.rs  passthrough_tool.rs  provider_agent.rs  rag_tools.rs  rag_tools_tests.rs  request_cancellation.rs  request_progress.rs  rig_builder.rs  schema_sanitize.rs  skill_tool.rs  stream_events.rs  streaming.rs  streaming_request_hook.rs  string_utils.rs  string_utils_tests.rs  test_env_lock.rs  todo_tool.rs  (+12 more)
crates/aura/src/hitl/: decision.rs  events.rs  gate.rs  mod.rs  protocol.rs  registry.rs  route.rs  tool.rs
crates/aura/src/orchestration/: bounding.rs  config.rs  context_fixture.rs  duplicate_call_guard.rs  events.rs  factory.rs  frame_validation_tests.rs  memory_fs.rs  memory_writer.rs  mod.rs  observer_wrapper.rs  orchestrator.rs  overview.rs  persistence.rs  persistence_wrapper.rs  prompt_constants.rs  prompt_journal.rs  stream_events.rs  templates.rs  types.rs
crates/aura/src/orchestration/bounding/: DESIGN.md
crates/aura/src/orchestration/context/: error.rs  evidence.rs  failure_history.rs  frame.rs  goal.rs  label.rs  mod.rs  named_check.rs  rendered.rs  turn.rs
crates/aura/src/orchestration/context_fixture/: DESIGN.md  MANIFEST.md  corpus.rs  envelope.rs  normalize.rs  (+3 more)
crates/aura/src/prompts/: bootstrap_prompt.md  continuation_prompt.md  continuation_wrapper.md  duplicate_call_abort.md  duplicate_call_guidance.md  evaluation_preamble.md  evaluation_prompt.md  mod.rs  orchestrator_preamble.md  phase_continuation.md  planning_prompt.md  reflection_prompt.md  session_history.md  sre_workflow_preamble.md  synthesis_iteration_prompt.md  synthesis_prompt.md  templates.md  todo_tool.md  worker_guidelines.md  worker_preamble.md  worker_roster.md  worker_task_prompt.md  workflows.rs
crates/aura/src/scratchpad/: context_budget.rs  mod.rs  schema.rs  setup.rs  storage.rs  tools.rs  wrapper.rs
crates/aura/src/session_store/: memory.rs  mod.rs  record.rs
crates/aura/tests/: stdio_mcp_test.rs
(+344 files in other folders)
