[workspace]
members = [
    "crates/aura",
    "crates/aura-config",
    "crates/aura-web-server",
    "crates/aura-test-utils",
]
resolver = "3"

[workspace.package]
version = "1.19.0"
edition = "2024"
authors = ["Mezmo <support@mezmo.com>"]
license = "Apache-2.0"
repository = "https://github.com/mezmo/aura"

[workspace.dependencies]
rig-core = { git = "https://github.com/mezmo/rig.git", rev = "0853ab14", features = ["rmcp"] }
# Pinned to exact versions compatible with our rig-core 0.28.x fork.
# Newer versions pull in rig-core 0.31+ which is semver-incompatible with the fork.
rig-bedrock = "=0.3.10"

# MCP support
rmcp = { version = "0.12.0", features = ["transport-child-process", "client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration management
twelf = { version = "0.15", features = ["toml", "json", "yaml", "env", "clap"] }
config = { version = "0.14", features = ["toml"] }  # Alternative for custom handling

# Environment variables
dotenv = "0.15"
regex = "1.11"

# Vector stores - pinned to exact version compatible with our rig-core 0.28.x fork
rig-qdrant = "=0.1.34"
qdrant-client = "1.14.0"
uuid = { version = "1.0", features = ["v4"] }

# AWS Bedrock dependencies
aws-config = "1.8.0"
aws-sdk-bedrockruntime = "1.95.0"
aws-sdk-bedrockagentruntime = "1.125.0"
aws-smithy-types = "1.3.2"
base64 = "0.22.1"
async-stream = "0.3.6"
schemars = "1.0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }

# Patch rig-core to use the fork with streaming hook + span propagation fix
[patch.crates-io]
rig-core = { git = "https://github.com/mezmo/rig.git", rev = "0853ab14" }

