[package]
name = "aura-cli"
description = "An interactive terminal client for chat completions with tool execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aura_cli"
path = "src/lib.rs"

[[bin]]
name = "aura"
path = "src/main.rs"

[features]
default = ["standalone-cli"]
standalone-cli = ["dep:aura", "dep:aura-config", "dep:aura-web-server", "dep:bytes", "dep:tokio-stream", "dep:tokio-util"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# Format-preserving TOML editor for in-place [telemetry] cli.toml edits.
# Pinned to the 0.22 line that `toml` 0.8 already builds on, so it adds
# no new transitive tree.
toml_edit = "0.22"
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
clap = { workspace = true, features = ["env"] }
dotenvy = { workspace = true }
rpassword = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
aura-events = { path = "../aura-events" }
aura-telemetry = { path = "../aura-telemetry" }
eventsource-stream = "0.2"
futures-util = "0.3"
unicode-segmentation = "1"
termimad = "0.34"
crossterm = "0.29"
rustyline = "17"
dirs = "6"
libc = "0.2"
signal-hook = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Standalone mode: build agents in-process from TOML config (no HTTP server needed)
aura = { path = "../aura", optional = true }
aura-config = { path = "../aura-config", optional = true }
aura-web-server = { path = "../aura-web-server", default-features = false, optional = true }
bytes = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
thiserror = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
