[package]
name = "aura-cli"
description = "An interactive terminal client for chat completions with tool execution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "aura_cli"
path = "src/lib.rs"

[[bin]]
name = "aura"
path = "src/main.rs"

[features]
default = ["standalone-cli"]
standalone-cli = ["dep:aura", "dep:aura-config", "dep:aura-web-server", "dep:bytes", "dep:tokio-stream", "dep:tokio-util"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# Format-preserving TOML editor for in-place [telemetry] cli.toml edits.
toml_edit = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
clap = { workspace = true, features = ["env"] }
dotenvy = { workspace = true }
rpassword = "7"
reqwest = { workspace = true, features = ["blocking"] }
aura-events = { path = "../aura-events" }
aura-telemetry = { path = "../aura-telemetry" }
eventsource-stream = "0.2"
futures-util = "0.3"
unicode-segmentation = "1"
termimad = "0.34"
crossterm = "0.29"
# `signal-hook` makes rustyline register SIGWINCH via signal_hook's chaining
# pipe instead of a raw sigaction, so our own SIGWINCH consumer (the resize
# watcher in repl/loop.rs) can coexist and fire while readline is blocked.
rustyline = { version = "17", features = ["signal-hook"] }
dirs = "6"
libc = "0.2"
signal-hook = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Standalone mode: build agents in-process from TOML config (no HTTP server needed)
aura = { path = "../aura", optional = true }
aura-config = { path = "../aura-config", optional = true }
aura-web-server = { path = "../aura-web-server", default-features = false, optional = true }
bytes = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
thiserror = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
