[package]
name = "aura-config"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Configuration / CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Environment variables
dotenv = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
