[package]
name = "aura-config"
version.workspace = true
edition.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Configuration / CLI
clap = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Environment variables
dotenvy = { workspace = true }
regex = { workspace = true }

# Glob matching for HITL tool-name patterns
globset = "0.4"

[dev-dependencies]
tempfile = "3"
