[package]
name = "aura-telemetry-derive"
version.workspace = true
edition = "2021"
description = "Proc-macro support for aura-telemetry. Not for direct use; re-exported via aura-telemetry."
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
