[package]
name = "aura-telemetry"
version.workspace = true
edition = "2021"
description = "Opt-out, anonymous-tier product telemetry for aura. See docs.mezmo.com/aura/telemetry."
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-telemetry-derive = { path = "../aura-telemetry-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Resolves the user home dir on every platform (USERPROFILE on Windows,
# HOME on Unix) so the install-id co-locates with the CLI's ~/.aura.
dirs = "6"

[dev-dependencies]
tempfile = "3.10"
trybuild = "1.0"
wiremock = "0.6"
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
