[package]
name = "aura-web-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura = { path = "../aura" }
aura-config = { path = "../aura-config" }
aura-events = { path = "../aura-events" }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
bytes = "1"
async-stream = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = { workspace = true }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
async-trait = "0.1.89"

a2a = { package = "a2a-lf", git = "https://github.com/a2aproject/a2a-rs.git", tag = "a2a-server-lf-v0.3.1" }
a2a-server = { package = "a2a-server-lf", git = "https://github.com/a2aproject/a2a-rs.git", tag = "a2a-server-lf-v0.3.1" }

redis = { version = "0.32", default-features = false, features = ["tokio-comp", "connection-manager", "script", "keep-alive"], optional = true }

[features]
default = ["otel"]
otel = ["aura/otel", "dep:tracing-opentelemetry", "dep:opentelemetry"]

# Redis/Valkey session-store backend (`AURA_SESSION_STORE=redis`).
# The in-memory backend is always compiled; this only gates the Redis client.
session-store-redis = ["dep:redis"]

# Integration test feature flags
# Parent flag - enables all integration tests
integration = [
    "integration-a2a",
    "integration-streaming",
    "integration-header-forwarding",
    "integration-mcp",
    "integration-events",
    "integration-cancellation",
    "integration-progress",
]

# Per-suite flags (can run individually)
integration-a2a = []                      # a2a tests
integration-streaming = []                # streaming_tests, concurrent_streaming_isolation_test
integration-header-forwarding = []        # header_forwarding_tests
integration-mcp = []                      # fastmcp_structured_content_test
integration-events = []                   # aura_events_test, proactive_tool_ui_tests
integration-cancellation = []             # cancellation_test, cancellation_notification_test
integration-progress = []                 # mcp_progress_test, progress_disconnect_test

# Optional - requires Qdrant (separate epic)
integration-vector = []         # vector_label_filter_tests

# Orchestration tests (separate from integration - needs different server config)
integration-orchestration = []  # orchestration_events_test

# SRE orchestration tests (separate - needs k8s-sre-mcp server config)
integration-orchestration-sre = []  # sre_orchestration_test

# Scratchpad integration tests (separate - needs scratchpad-test-mcp server config)
integration-scratchpad = []  # scratchpad_test

# Session-store integration tests (needs a live Redis/Valkey; see
# `AURA_TEST_REDIS_URL` in tests/redis_session_store_test.rs)
integration-session-store = ["session-store-redis"]  # redis_session_store_test

[dev-dependencies]
tokio-test = "0.4"
reqwest = { workspace = true }
futures = "0.3"
eventsource-stream = "0.2"
rig-core = { workspace = true }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
aura-test-utils = { path = "../aura-test-utils" }
aura-events = { path = "../aura-events" }
tower = "0.5"
