[package]
name = "aura"
version.workspace = true
edition.workspace = true
description = "Core agent builder library for Rig.rs - construct agents from configuration"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
aura-config = { path = "../aura-config" }

# Rig dependencies
rig-core = { workspace = true }
rig-bedrock = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-bedrockagentruntime = { workspace = true }

rmcp = { workspace = true }
base64 = "0.22"
bytes = "1"
futures = "0.3"
sse-stream = "0.2"
reqwest = { workspace = true }
http = { workspace = true }
url = "2"

# Shared event types (lightweight, no agent/MCP deps)
aura-events = { path = "../aura-events", features = ["rmcp-types"] }

# Serialization (for tool schemas)
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
chrono = "0.4"

# Vector stores - Qdrant support
rig-qdrant = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }

regex = "1"
async-stream = "0.3"
toml = "0.8"
strum = { workspace = true }

# Tokenization for scratchpad context budget
tiktoken-rs = "0.9.1"
# Exact local Gemini tokenizer (embeds the Gemma 3 SentencePiece model)
gemini-tokenizer = "0.2.0"

[features]
default = ["otel"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
# Integration test umbrella (mirrors aura-web-server pattern)
integration = ["integration-stdio"]
integration-stdio = []

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.45", features = ["test-util", "macros", "rt"] }

